// This file defines messages to be used in tests for exec stages.
syntax = "proto3";

option go_package = "github.com/DuarteMRAlves/maestro/test/pb";

package pb;

// MergeMessage defines a message to test the merge stage.
message MergeMessage {
  MergeInner1 in1 = 1;
  MergeInner2 in2 = 2;
  MergeInner3 in3 = 3;
}

message MergeInner1 {
  int32 val = 1;
}

message MergeInner2 {
  int32 val = 1;
}

message MergeInner3 {
  int32 val = 1;
}